tests/baselines/reference/logicalNotOperatorWithNumberType(strict=true).errors.txt
logicalNotOperatorWithNumberType.ts(8,12): error TS2564: Property 'a' has no initializer and is not definitely assigned in the constructor.
logicalNotOperatorWithNumberType.ts(18,25): error TS2454: Variable 'NUMBER' is used before being assigned.
logicalNotOperatorWithNumberType.ts(32,27): error TS2454: Variable 'NUMBER' is used before being assigned.
logicalNotOperatorWithNumberType.ts(32,36): error TS2454: Variable 'NUMBER' is used before being assigned.
logicalNotOperatorWithNumberType.ts(35,27): error TS2454: Variable 'NUMBER' is used before being assigned.
logicalNotOperatorWithNumberType.ts(36,29): error TS2454: Variable 'NUMBER' is used before being assigned.
logicalNotOperatorWithNumberType.ts(36,38): error TS2454: Variable 'NUMBER' is used before being assigned.
logicalNotOperatorWithNumberType.ts(40,2): error TS2454: Variable 'NUMBER' is used before being assigned.
logicalNotOperatorWithNumberType.ts(45,1): error TS2695: Left side of comma operator is unused and has no side effects.


==== logicalNotOperatorWithNumberType.ts (9 errors) ====
    // ! operator on number type
    var NUMBER: number;
    var NUMBER1: number[] = [1, 2];
    
    function foo(): number { return 1; }
    
    class A {
        public a: number;
               ~
!!! error TS2564: Property 'a' has no initializer and is not definitely assigned in the constructor.
        static foo() { return 1; }
    }
    module M {
        export var n: number;
    }
    
    var objA = new A();
    
    // number type var
    var ResultIsBoolean1 = !NUMBER;
                            ~~~~~~
!!! error TS2454: Variable 'NUMBER' is used before being assigned.
    var ResultIsBoolean2 = !NUMBER1;
    
    // number type literal
    var ResultIsBoolean3 = !1;
    var ResultIsBoolean4 = !{ x: 1, y: 2};
    var ResultIsBoolean5 = !{ x: 1, y: (n: number) => { return n; } };
    
    // number type expressions
    var ResultIsBoolean6 = !objA.a;
    var ResultIsBoolean7 = !M.n;
    var ResultIsBoolean8 = !NUMBER1[0];
    var ResultIsBoolean9 = !foo();
    var ResultIsBoolean10 = !A.foo();
    var ResultIsBoolean11 = !(NUMBER + NUMBER);
                              ~~~~~~
!!! error TS2454: Variable 'NUMBER' is used before being assigned.
                                       ~~~~~~
!!! error TS2454: Variable 'NUMBER' is used before being assigned.
    
    // multiple ! operator
    var ResultIsBoolean12 = !!NUMBER;
                              ~~~~~~
!!! error TS2454: Variable 'NUMBER' is used before being assigned.
    var ResultIsBoolean13 = !!!(NUMBER + NUMBER);
                                ~~~~~~
!!! error TS2454: Variable 'NUMBER' is used before being assigned.
                                         ~~~~~~
!!! error TS2454: Variable 'NUMBER' is used before being assigned.
    
    // miss assignment operators
    !1;
    !NUMBER;
     ~~~~~~
!!! error TS2454: Variable 'NUMBER' is used before being assigned.
    !NUMBER1;
    !foo();
    !objA.a;
    !M.n;
    !objA.a, M.n;
    ~~~~~~~
!!! error TS2695: Left side of comma operator is unused and has no side effects.